--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ Temporary Items
 /tmp/
 
 # Used by dotenv library to load environment variables.
-# .env
+.env
 
 ## Specific to RubyMotion:
 .dat*
