set network_mode

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,11 @@
-version: '3'
+version: '3.4'
 services:
   app:
-    build: .
+    build:
+      context: .
+      network: host
     volumes:
       - .:/app
     env_file:
       - .env
+    network_mode: host
